--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -326,6 +326,15 @@ config SUSPEND_TIME
 	  keeps statistics on the time spent in suspend in
 	  /sys/kernel/debug/suspend_time
 
+
 config DEDUCE_WAKEUP_REASONS
 	bool "Deduce wakeup reasons"
 	default n
+
+config QUICK_WAKEUP
+	bool "Quick wakeup"
+	depends on SUSPEND
+	default n
+	---help---
+	  Allow kernel driver to do periodic jobs without resuming the full system
+	  This option can increase battery life on android powered smartphone.
