--- a/arch/arm64/hotplug/Makefile
+++ b/arch/arm64/hotplug/Makefile
@@ -1,2 +1,3 @@
 obj-$(CONFIG_LAZYPLUG)			  += lazyplug.o
 obj-$(CONFIG_ALUCARD_HOTPLUG)   += alucard_hotplug.o
+obj-$(CONFIG_AiO_HotPlug)	          += AiO_HotPlug.o
