--- a/arch/arm/boot/dts/qcom/zuk/common-charger.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/common-charger.dtsi
@@ -1,8 +1,8 @@
 &pmi8994_charger {
 	qcom,battery-data = <&mtp_batterydata>;	
-	qcom,fastchg-current-ma = <2000>;
+	qcom,fastchg-current-ma = <2400>;
 	qcom,float-voltage-mv = <4400>;
-	qcom,thermal-mitigation = <1400 500 0>;
+	qcom,thermal-mitigation = <2400 1500 900 0>;
 	qcom,warm-cc-comp = <1300>;
 	qcom,warm-fv-comp = <4100>;
 	qcom,cool-cc-comp = <500>;
