--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -543,8 +543,9 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_INPUT_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -3035,6 +3036,7 @@ CONFIG_SND_SOC_WCD_MBHC=y
 # CONFIG_SND_SOC_WM8978 is not set
 # CONFIG_SND_SOC_TPA6130A2 is not set
 CONFIG_SND_SOC_MSM_STUB=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_NXP_TFA98xx is not set
 # CONFIG_SND_SIMPLE_CARD is not set
