--- a/arch/arm/boot/dts/qcom/zuk/common.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/common.dtsi
@@ -18,6 +18,7 @@
 		/delete-property/ i2c12;
 		/delete-property/ spi12;
 	};
+	/delete-node/ firmware;
 };
 
 &soc {
@@ -358,12 +359,4 @@
 
 &i2c_8 {
 	/delete-node/ nq@28;
-};
-
-&firmware {
-	android {
-		fstab {
-			/delete-node/ vendor;
-		};
-	};
 };
