--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -292,8 +292,11 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SWITCHER=y
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_FIOPS is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
@@ -532,18 +535,23 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_RELAXED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
 
 #
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_RELAXED=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
@@ -4517,6 +4525,7 @@ CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_BINARY_PRINTF=y
 
 #
