--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -2574,8 +2574,8 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
 # CONFIG_MSM_CAMERA_AUTOMOTIVE is not set
-# CONFIG_MSMB_CAMERA is not set
-CONFIG_ZUK_CAMERA=y
+CONFIG_MSMB_CAMERA=y
+CONFIG_ZUK_CAMERA=n
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
