--- a/drivers/media/platform/msm/camera_v2z/Makefile
+++ b/drivers/media/platform/msm/camera_v2z/Makefile
@@ -1,3 +1,4 @@
+ccflags-y := -Os
 ccflags-y += -Idrivers/media/platform/msm/camera_v2z
 ccflags-y += -Idrivers/media/platform/msm/camera_v2z/sensor
 ccflags-y += -Idrivers/media/platform/msm/camera_v2z/codecs
