--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -824,4 +824,11 @@ config DOUBLE_TAP
 	help
 	 If you say yes here, you get support Bosch double tap sensor function
 
+config FPC1020_REE
+	tristate "FPC1020 fingerprint sensor support"
+	help
+	  The FPC1020 is a fingerprint sensor for smartphone, only manage
+	  IRQ & HW reset gpio in the REE side.
+	  If unsure, say N.
+ 
 endif
