--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.91 Kernel Configuration
+# Linux/arm64 3.18.92 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -104,6 +104,7 @@ CONFIG_TASK_IO_ACCOUNTING=y
 #
 CONFIG_TREE_PREEMPT_RCU=y
 CONFIG_PREEMPT_RCU=y
+CONFIG_SRCU=y
 # CONFIG_TASKS_RCU is not set
 CONFIG_RCU_STALL_COMMON=y
 # CONFIG_RCU_USER_QS is not set
@@ -113,7 +114,7 @@ CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_PRIO=1
+CONFIG_RCU_KTHREAD_PRIO=1
 CONFIG_RCU_BOOST_DELAY=500
 # CONFIG_RCU_NOCB_CPU is not set
 # CONFIG_BUILD_BIN2C is not set
@@ -391,7 +392,6 @@ CONFIG_ARCH_SELECT_MEMORY_MODEL=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HW_PERF_EVENTS=y
 # CONFIG_PERF_EVENTS_USERMODE is not set
-# CONFIG_PERF_EVENTS_RESET_PMU_DEBUGFS is not set
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
@@ -439,6 +439,7 @@ CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 # CONFIG_CP15_BARRIER_EMULATION is not set
@@ -555,6 +556,7 @@ CONFIG_CPU_FREQ_GOV_RELAXED=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
+CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -1862,6 +1864,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_PIXART_OTS_PAT9125_SWITCH is not set
 # CONFIG_SENSORS_LTR553 is not set
 # CONFIG_SENSORS_BMA2X2 is not set
+CONFIG_FPC1020_REE=y
 
 #
 # Hardware I/O ports
@@ -2575,7 +2578,8 @@ CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
 # CONFIG_MSM_CAMERA_AUTOMOTIVE is not set
 CONFIG_MSMB_CAMERA=y
-CONFIG_ZUK_CAMERA=n
+# CONFIG_MSMB_CAMERA_DEBUG is not set
+# CONFIG_ZUK_CAMERA is not set
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -2602,6 +2606,8 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_JPEGDMA=y
+CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
+# CONFIG_MSM_SEC_CCI_DEBUG is not set
 # CONFIG_MSM_AIS is not set
 # CONFIG_TSPP is not set
 # CONFIG_MSM_SDE_ROTATOR is not set
@@ -3045,9 +3051,9 @@ CONFIG_SND_SOC_WCD_MBHC=y
 # CONFIG_SND_SOC_WM8978 is not set
 # CONFIG_SND_SOC_TPA6130A2 is not set
 CONFIG_SND_SOC_MSM_STUB=y
-CONFIG_SOUND_CONTROL=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_NXP_TFA98xx is not set
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3999,7 +4005,6 @@ CONFIG_EFI_RUNTIME_WRAPPERS=y
 CONFIG_EFI_ARMSTUB=y
 CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
-CONFIG_FPC1020_REE=y
 
 #
 # Firmware Drivers
@@ -4453,7 +4458,7 @@ CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 # CONFIG_CRYPTO_GHASH is not set
-CONFIG_CRYPTO_MD4=y
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -4462,7 +4467,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
-# CONFIG_CRYPTO_SHA512 is not set
+CONFIG_CRYPTO_SHA512=y
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
 
