defconfig: Enable Fast_Charge.
Signed-off-by: AyushR1 <ayushrathore12501@gmail.com>

--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -2211,6 +2211,7 @@ CONFIG_BATTERY_BCL=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 # CONFIG_MSM_BCL_SOMC_CTL is not set
+CONFIG_FAST_CHARGE=y
 CONFIG_QNS_SYSTEM=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
