--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -131,7 +131,9 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_MEMCG is not set
+CONFIG_MEMCG=y
+# CONFIG_MEMCG_SWAP is not set
+# CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -584,6 +586,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -2603,8 +2607,6 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_JPEGDMA=y
-CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
-# CONFIG_MSM_SEC_CCI_DEBUG is not set
 # CONFIG_MSM_AIS is not set
 # CONFIG_TSPP is not set
 # CONFIG_MSM_SDE_ROTATOR is not set
@@ -3592,13 +3594,7 @@ CONFIG_RTC_DRV_QPNP=y
 # HID Sensor RTC drivers
 #
 # CONFIG_RTC_DRV_HID_SENSOR_TIME is not set
-CONFIG_ESOC=y
-CONFIG_ESOC_DEV=y
-CONFIG_ESOC_CLIENT=y
-# CONFIG_ESOC_DEBUG is not set
-CONFIG_ESOC_MDM_4x=y
-CONFIG_ESOC_MDM_DRV=y
-# CONFIG_ESOC_MDM_DBG_ENG is not set
+# CONFIG_ESOC is not set
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
 
@@ -3666,7 +3662,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
-# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -3879,7 +3874,7 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 # CONFIG_MSM_PIL_SSR_BG is not set
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
 # CONFIG_MSM_SHARED_HEAP_ACCESS is not set
-CONFIG_TRACER_PKT=y
+# CONFIG_TRACER_PKT is not set
 CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
 # CONFIG_MSM_BAM_DMUX is not set
@@ -3887,7 +3882,7 @@ CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
-CONFIG_MSM_QBT1000=y
+# CONFIG_MSM_QBT1000 is not set
 CONFIG_MSM_KERNEL_PROTECT=y
 # CONFIG_MSM_KERNEL_PROTECT_MPU is not set
 # CONFIG_MSM_KERNEL_PROTECT_TEST is not set
@@ -3919,6 +3914,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
@@ -4403,6 +4399,7 @@ CONFIG_CRYPTO_ABLK_HELPER=y
 #
 # CONFIG_CRYPTO_CCM is not set
 # CONFIG_CRYPTO_GCM is not set
+CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_SEQIV=y
 
 #
@@ -4431,6 +4428,7 @@ CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 # CONFIG_CRYPTO_GHASH is not set
+CONFIG_CRYPTO_POLY1305=y
 # CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
@@ -4458,6 +4456,7 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_FCRYPT is not set
 # CONFIG_CRYPTO_KHAZAD is not set
 # CONFIG_CRYPTO_SALSA20 is not set
+CONFIG_CRYPTO_CHACHA20=y
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
 # CONFIG_CRYPTO_TEA is not set
