--- a/drivers/media/platform/msm/camera_v2/sensor/ois/Makefile
+++ b/drivers/media/platform/msm/camera_v2/sensor/ois/Makefile
@@ -2,4 +2,4 @@ ccflags-y += -Idrivers/media/platform/msm/camera_v2
 ccflags-y += -Idrivers/media/platform/msm/camera_v2/common
 ccflags-y += -Idrivers/media/platform/msm/camera_v2/sensor/io
 ccflags-y += -Idrivers/media/platform/msm/camera_v2/sensor/cci
-obj-$(0) += msm_ois.o
+obj-$(CONFIG_MSMB_CAMERA) += msm_ois.o
