--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.92 Kernel Configuration
+# Linux/arm64 3.18.96 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -371,7 +371,7 @@ CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_DCACHE_DISABLE is not set
 # CONFIG_ARM64_ICACHE_DISABLE is not set
 CONFIG_MSM_APP_API=y
-CONFIG_ENABLE_FP_SIMD_SETTINGS=y
+# CONFIG_ENABLE_FP_SIMD_SETTINGS is not set
 CONFIG_MSM_APP_SETTINGS=y
 CONFIG_ARM64_VA_BITS_39=y
 CONFIG_ARM64_VA_BITS=39
@@ -2207,14 +2207,12 @@ CONFIG_QPNP_SMBCHARGER=y
 # CONFIG_FUELGAUGE_STC3117 is not set
 CONFIG_QPNP_FG=y
 # CONFIG_QPNP_FG_GEN3 is not set
-CONFIG_BATTERY_BCL=y
+# CONFIG_BATTERY_BCL is not set
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
 # CONFIG_QPNP_TYPEC is not set
-CONFIG_MSM_BCL_CTL=y
-CONFIG_MSM_BCL_PERIPHERAL_CTL=y
-# CONFIG_MSM_BCL_SOMC_CTL is not set
+# CONFIG_MSM_BCL_CTL is not set
 CONFIG_FAST_CHARGE=y
 CONFIG_QNS_SYSTEM=y
 CONFIG_POWER_RESET=y
@@ -2578,9 +2576,8 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
 # CONFIG_MSM_CAMERA_AUTOMOTIVE is not set
-CONFIG_MSMB_CAMERA=y
-# CONFIG_MSMB_CAMERA_DEBUG is not set
-# CONFIG_ZUK_CAMERA is not set
+# CONFIG_MSMB_CAMERA is not set
+CONFIG_ZUK_CAMERA=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -3766,6 +3763,7 @@ CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_CLKSRC_OF=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
+# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 # CONFIG_ATMEL_PIT is not set
 # CONFIG_SH_TIMER_CMT is not set
 # CONFIG_SH_TIMER_MTU2 is not set
@@ -4091,7 +4089,14 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+# CONFIG_F2FS_FS_SECURITY is not set
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
@@ -4568,4 +4573,3 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_LAZYPLUG=y
