--- a/arch/arm64/configs/AR_Beast_z2_plus_defconfig
+++ b/arch/arm64/configs/AR_Beast_z2_plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.97 Kernel Configuration
+# Linux/arm64 3.18.100 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -131,9 +131,7 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-CONFIG_MEMCG=y
-# CONFIG_MEMCG_SWAP is not set
-# CONFIG_MEMCG_KMEM is not set
+# CONFIG_MEMCG is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -441,7 +439,8 @@ CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_UNMAP_KERNEL_AT_EL0=y
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 # CONFIG_CP15_BARRIER_EMULATION is not set
@@ -541,9 +540,9 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
@@ -556,7 +555,7 @@ CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 # CONFIG_CPU_BOOST is not set
-CONFIG_CPU_INPUT_BOOST=y
+# CONFIG_CPU_INPUT_BOOST is not set
 CONFIG_FINGERPRINT_BOOST=y
 CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
 
@@ -1149,7 +1148,9 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-# CONFIG_ZRAM is not set
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_LZ4_COMPRESS is not set
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -2525,7 +2526,6 @@ CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
 CONFIG_REGULATOR_CPR3=y
-CONFIG_VOLTAGE_CONTROL=y
 CONFIG_REGULATOR_CPR3_HMSS=y
 CONFIG_REGULATOR_CPR3_MMSS=y
 # CONFIG_REGULATOR_CPR4_APSS is not set
@@ -2591,15 +2591,15 @@ CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_MSM_ISPIF_V2 is not set
-# CONFIG_IMX134 is not set
-# CONFIG_IMX132 is not set
-# CONFIG_OV9724 is not set
-# CONFIG_OV5648 is not set
-# CONFIG_GC0339 is not set
-# CONFIG_OV8825 is not set
+CONFIG_IMX134=y
+CONFIG_IMX132=y
+CONFIG_OV9724=y
+CONFIG_OV5648=y
+CONFIG_GC0339=y
+CONFIG_OV8825=y
 CONFIG_OV8865=y
 CONFIG_s5k4e1=y
-# CONFIG_OV12830 is not set
+CONFIG_OV12830=y
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
@@ -3162,11 +3162,11 @@ CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_EHCI_HCD=y
-CONFIG_USB_EHCI_ROOT_HUB_TT=y
+# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_PCI=y
-CONFIG_USB_EHCI_MSM=y
-CONFIG_USB_EHCI_MSM_HSIC=y
+# CONFIG_USB_EHCI_MSM is not set
+# CONFIG_USB_EHCI_MSM_HSIC is not set
 # CONFIG_USB_EHCI_HCD_PLATFORM is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
@@ -3175,10 +3175,8 @@ CONFIG_USB_EHCI_MSM_HSIC=y
 # CONFIG_USB_FUSBH200_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
-CONFIG_USB_OHCI_HCD=y
-CONFIG_USB_OHCI_HCD_PCI=y
-# CONFIG_USB_OHCI_HCD_PLATFORM is not set
-CONFIG_USB_UHCI_HCD=y
+# CONFIG_USB_OHCI_HCD is not set
+# CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
@@ -3331,7 +3329,7 @@ CONFIG_USB_QTI_KS_BRIDGE=y
 # USB Physical Layer drivers
 #
 CONFIG_USB_PHY=y
-CONFIG_USB_OTG_WAKELOCK=y
+# CONFIG_USB_OTG_WAKELOCK is not set
 CONFIG_NOP_USB_XCEIV=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ISP1301 is not set
@@ -3417,7 +3415,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=y
+# CONFIG_MMC_TEST is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3729,7 +3727,7 @@ CONFIG_MSM_MHI_UCI=y
 # CONFIG_MSM_MHI_DEBUG is not set
 # CONFIG_PFT is not set
 # CONFIG_I2C_MSM_PROF_DBG is not set
-CONFIG_SEEMP_CORE=y
+# CONFIG_SEEMP_CORE is not set
 CONFIG_QPNP_HAPTIC=y
 CONFIG_GPIO_USB_DETECT=y
 CONFIG_MSM_11AD=y
@@ -3905,13 +3903,12 @@ CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
-CONFIG_ARM_MEMLAT_MON=y
+# CONFIG_ARM_MEMLAT_MON is not set
 CONFIG_MSMCCI_HWMON=y
 CONFIG_MSM_M4M_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
-CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_ADRENO_IDLER=y
 
 #
@@ -3993,8 +3990,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
-CONFIG_EXT4_ENCRYPTION=y
-CONFIG_EXT4_FS_ENCRYPTION=y
+# CONFIG_EXT4_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
@@ -4008,7 +4004,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-CONFIG_FS_ENCRYPTION=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4573,3 +4569,4 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+CONFIG_AiO_HotPlug=y
