Revert "dts: Remove node for fast charge current."
This reverts commit 356c3af334732c5225afdd500184a434e984777c.

Signed-off-by: AyushR1 <ayushrathore12501@gmail.com>

--- a/arch/arm/boot/dts/qcom/zuk/common-charger.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/common-charger.dtsi
@@ -1,6 +1,6 @@
 &pmi8994_charger {
 	qcom,battery-data = <&mtp_batterydata>;	
-	// qcom,fastchg-current-ma = <2400>; Using custom current 
+	qcom,fastchg-current-ma = <2400>;
 	qcom,float-voltage-mv = <4400>;
 	qcom,thermal-mitigation = <2400 1500 900 0>;
 	qcom,warm-cc-comp = <1300>;
